Fix T40519: Keyed parameter are not redrawed

The issue has been introduced in 1fabfc9 by changing
notifiers being sent.